Corrigindo a aplicação do CORS