@@ -1,14 +1,17 @@
 package com.laisa.callSystem.config;
 
+import java.util.Arrays;
+
 import com.laisa.callSystem.security.JWTAuthenticationFilter;
 import com.laisa.callSystem.security.JWTAuthorizationFilter;
 import com.laisa.callSystem.security.JWTUtil;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
@@ -18,13 +21,11 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.List;
 
-
+@EnableWebSecurity
 @Configuration
-@EnableMethodSecurity
+@EnableMethodSecurity(prePostEnabled = true)
 public class SecurityConfig {
-    private static final String[] PUBLIC_MATCHERS = { "/h2-console/**", "/login" };
 
     private final JWTUtil jwtUtil;
     private final UserDetailsService userDetailsService;
@@ -34,43 +35,53 @@ public class SecurityConfig {
         this.userDetailsService = userDetailsService;
     }
 
+    // CONFIGURAÇÃO DO GERENCIADOR DE AUTENTICAÇÃO
     @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http, AuthenticationManager authManager) throws Exception {
-        http
-                .cors().and().csrf().disable()
-                .authorizeHttpRequests(auth -> auth
-                        .requestMatchers(PUBLIC_MATCHERS).permitAll()
-                        .anyRequest().authenticated()
+    AuthenticationManager authenticationManager(HttpSecurity httpSecurity, BCryptPasswordEncoder passwordEncoder) throws Exception {
+        return httpSecurity.getSharedObject(AuthenticationManagerBuilder.class)
+                .userDetailsService(userDetailsService)
+                .passwordEncoder(passwordEncoder)
+                .and()
+                .build();
+    }
+
+    // CONFIGURAÇÃO DA CADEIA DE FILTROS DE SEGURANÇA
+    @Bean
+    SecurityFilterChain securityFilterChain(HttpSecurity httpSecurity, AuthenticationManager authenticationManager) throws Exception {
+
+        return httpSecurity
+                .csrf(csrf -> csrf.disable()) // DESATIVA CSRF (RECOMENDADO PARA APIS RESTFUL)
+                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // ATIVA CORS COM CONFIGURAÇÃO PERSONALIZADA
+                .addFilterBefore(new JWTAuthenticationFilter(authenticationManager, jwtUtil),
+                        UsernamePasswordAuthenticationFilter.class) // FILTRO DE AUTENTICAÇÃO JWT
+                .addFilterBefore(new JWTAuthorizationFilter(authenticationManager, jwtUtil, userDetailsService),
+                        UsernamePasswordAuthenticationFilter.class) // FILTRO DE AUTORIZAÇÃO JWT
+                .authorizeHttpRequests(authz -> authz
+                        .requestMatchers("/login/**").permitAll() // PERMITE ACESSO SEM AUTENTICAÇÃO AO LOGIN
+                        .anyRequest().authenticated() // EXIGE AUTENTICAÇÃO PARA OUTROS ENDPOINTS
                 )
-                .sessionManagement(sess -> sess.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .addFilterBefore(new JWTAuthenticationFilter(authManager, jwtUtil), UsernamePasswordAuthenticationFilter.class)
-                .addFilterBefore(new JWTAuthorizationFilter(authManager, jwtUtil, userDetailsService), UsernamePasswordAuthenticationFilter.class);
-
-        return http.build();
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)) // NÃO ARMAZENA A SESSÃO DO USUÁRIO
+                .build();
     }
 
+    // CONFIGURAÇÃO DE CORS
     @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) throws Exception {
-        return authConfig.getAuthenticationManager();
-    }
-
-    @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
+    CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("*"));
-        configuration.setAllowedMethods(List.of("POST", "GET", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type"));
-        configuration.setExposedHeaders(List.of("Authorization"));
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:4200"));
+        configuration.setAllowedMethods(Arrays.asList("POST", "GET", "DELETE", "OPTIONS", "PUT"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept", "Access-Control-Allow-Headers"));
         configuration.setAllowCredentials(true);
+        configuration.addExposedHeader("Authorization");
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 
-
+    // CONFIGURAÇÃO DO ENCODER DE SENHAS
     @Bean
-    public BCryptPasswordEncoder bCryptPasswordEncoder() {
+    BCryptPasswordEncoder bCryptPasswordEncoder() {
         return new BCryptPasswordEncoder();
     }
 }
